# crawl-data-tvpl

./: README.md  main.py  pyproject.toml
.github/workflows/: alembic.yml  document_detail_trigger.yml  release_stuck_tasks_trigger.yml
code/: extract_document_detail.py  load_document_detail.py  release_stuck_tasks.py
code/crawler/: env.py  settings.py
code/crawler/database/: config.py  models.py  service.py
code/crawler/spiders/: document_detail_spider.py
code/crawler/utils/: google_drive.py
code/migrations/: env.py
code/migrations/versions/: 3d2fe23ad160_remove_url_and_meta_data_columns_from_.py  be88623442e8_add_has_pdf_column_to_raw_model.py  f7c646b7911b_initial_database.py
